# abstract_vm

./: .gitignore  CMakeLists.txt  MEMENTO  Makefile  README.md  test
includes/: AnalyzerClass.hpp  CalculatorClass.hpp  ErrorHandlerClass.hpp  ExceptionClass.hpp  Factory.hpp  GlobalVariables.hpp  IOperand.hpp  InputParserClass.hpp  InstructClass.hpp  LexerClass.hpp  LogClass.hpp  MatcherClass.hpp  Operand.hpp  ParserClass.hpp  TokenizerClass.hpp  ValueClass.hpp  VmClass.hpp  eOperandType.hpp  eVerb.hpp  eVerboseLevel.hpp
srcs/: AnalyzerClass.cpp  CalculatorClass.cpp  ErrorHandlerClass.cpp  ExceptionClass.cpp  Factory.cpp  InputParserClass.cpp  InstructClass.cpp  LexerClass.cpp  LogClass.cpp  MatcherClass.cpp  ParserClass.cpp  TokenizerClass.cpp  ValueClass.cpp  VmClass.cpp  main.cpp
tests/: 00_push.avm  08_print.avm  09_many_errors.avm  test2  test4
